--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # NEXT_PUBLIC_APP_URL=https://api.questcity.cloud/hamster-quest
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=http://localhost:3001/hamster-quest
