--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 # NEXT_PUBLIC_APP_URL=https://api.questcity.cloud/hamster-quest
 NEXT_PUBLIC_APP_URL=http://localhost:3000/hamster-quest
+NEXT_PUBLIC_SOCKET_URL=https://api.questcity.cloud
+NEXT_PUBLIC_SOCKET_PATH=/hamster-world/socket.io
+NODE_ENV=production
