--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-cookie": "^8.0.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
