animation rank card

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bot:dev": "tsx watch src/bot/index.ts"
   },
   "dependencies": {
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.554.0",
     "mongoose": "^8.19.3",
     "next": "^14.2.5",
