--- a/.env
+++ b/.env
@@ -1,9 +1,6 @@
-# NEXT_PUBLIC_APP_URL=https://api.questcity.cloud/hamster-quest
-NEXT_PUBLIC_APP_URL=http://localhost:3000/hamster-quest
-# NEXT_PUBLIC_BACKEND_URL=http://localhost:3000
-# NEXT_PUBLIC_SOCKET_URL=http://localhost:3000
-# NEXT_PUBLIC_SOCKET_PATH=/socket.io
-NEXT_PUBLIC_BACKEND_URL=https://api.questcity.cloud/hamster-world-api
-NEXT_PUBLIC_SOCKET_URL=https://api.questcity.cloud
-NEXT_PUBLIC_SOCKET_PATH=/hamster-world-api/socket.io
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+# NEXT_PUBLIC_APP_URL=http://192.168.100.53:3001
+NEXT_PUBLIC_BACKEND_URL=https://api.hamsterquest.com
+NEXT_PUBLIC_SOCKET_URL=https://api.hamsterquest.com
+NEXT_PUBLIC_SOCKET_PATH=/socket
 NODE_ENV=production
