--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 NEXT_PUBLIC_APP_URL=http://localhost:3002
-# NEXT_PUBLIC_APP_URL=http://192.168.100.53:3001
-# NEXT_PUBLIC_BACKEND_URL=https://api.hamsterquest.com
-# NEXT_PUBLIC_SOCKET_URL=https://api.hamsterquest.com
-NEXT_PUBLIC_BACKEND_URL=http://localhost:3000
-NEXT_PUBLIC_SOCKET_URL=http://localhost:3000
+# NEXT_PUBLIC_APP_URL=https://hamsterquest.com
+NEXT_PUBLIC_BACKEND_URL=https://api.hamsterquest.com
+NEXT_PUBLIC_SOCKET_URL=https://api.hamsterquest.com
+# NEXT_PUBLIC_BACKEND_URL=http://localhost:3000
+# NEXT_PUBLIC_SOCKET_URL=http://localhost:3000
 NEXT_PUBLIC_SOCKET_PATH=/socket
 NODE_ENV=production
